# Harmonizer-Plugin

./: .gitignore  CMakeLists.txt  README.md
HarmonizerPlugin/: HarmonizerPlugin.jucer  HarmonizerPlugin1.jucer
HarmonizerPlugin/JuceLibraryCode/: AppConfig.h  JuceHeader.h
HarmonizerPlugin/Source/: Harmony.cpp  Harmony.h  MeterComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Ppm.cpp  Ppm.h
Offline Implementation/src/Harmony/: Harmony.cpp
Offline Implementation/src/MUSI6106Exec/: CMakeLists.txt  MUSI6106Exec.cpp
Offline Implementation/src/Tests/Tests/: Test_CombFilter.cpp  Test_RingBuffer.cpp
Offline Implementation/src/inc/: CombFilter.h  CombFilterIf.h  Fft.h  Harmony.h
Offline Implementation/src/inc/CombFilter/: CombFilter.cpp  CombFilterIf.cpp
src/: MUSI6106Config.h.in
src/CombFilter/: CombFilter.cpp  CombFilterIf.cpp
src/Fft/: CMakeLists.txt  Fft.cpp
src/Harmony/: CMakeLists.txt  Harmony.cpp
src/MUSI6106Exec/: CMakeLists.txt  MUSI6106Exec.cpp
src/Tests/TestExec/: CMakeLists.txt
src/Tests/Tests/: Test_Fft.cpp
src/inc/: AudioFileIf.h  Harmony.h  RingBuffer.h
src/inc/CombFilter/: CMakeLists.txt
